--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,27 +4,27 @@
 @import 'contacts';
 
 :root {
-  --container-width: 1600px;
   --container-padding: 48px;
+  --container-width: 1600px;
   @include --max-3xl {
-    --container-width: 1408px;
     --container-padding: 32px;
+    --container-width: 1408px;
   }
   @include --max-2xl {
-    --container-width: 1216px;
     --container-padding: 16px;
+    --container-width: 1216px;
   }
   @include --max-xl {
-    --container-width: 976px;
     --container-padding: 12px;
+    --container-width: 976px;
   }
   @include --max-lg {
-    --container-width: 736px;
-    --container-padding: 12px;
+    --container-padding: 24px;
+    --container-width: calc(100vw - (var(--container-padding) * 2));
   }
   @include --max-md {
-    --container-width: calc(100vw - 32px);
     --container-padding: 12px;
+    --container-width: calc(100vw - (var(--container-padding) * 2));
   }
 }
 
@@ -811,233 +811,6 @@ select {
 // .idx1 span {
 //     padding: 51px 0 0;
 // }
-.uk-offcanvas-bar {
-  background: #fff;
-  overflow-x: hidden;
-}
-@media (min-width: $breakpoint-medium) {
-  .catalog-menu {
-    background-color: #002c39;
-    position: relative;
-    z-index: 100;
-  }
-  .catalog-menu__main {
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
-    &.uk-hidden {
-      display: block !important;
-      visibility: visible !important;
-    }
-    > li {
-      list-style: none;
-      border-left: 1px solid #003f51;
-      padding: 0;
-      flex-grow: 1;
-      &:first-child {
-        border-left: 0;
-      }
-      > a {
-        color: #ffffff;
-        font-size: 20px;
-        line-height: 48px;
-        text-decoration: none;
-        text-transform: uppercase;
-        text-shadow: 0 1px 0 #004254;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        span {
-          display: block;
-        }
-        &:hover {
-          background: #169bbb;
-          &::after {
-            border-top-color: #ffffff;
-          }
-        }
-      }
-      &.parent {
-        > a:after {
-          content: '';
-          width: 0;
-          height: 0;
-          border-left: 5px;
-          border-top: 5px;
-          border-right: 5px;
-          border-bottom: 0;
-          border-style: solid;
-          border-color: #169bbb transparent transparent;
-          display: inline-block;
-          margin-left: 8px;
-          position: relative;
-        }
-      }
-      &.active {
-      }
-      &:hover {
-        > .catalog-submenu {
-          opacity: 1;
-          visibility: visible;
-        }
-        a {
-          background: #169bbb;
-          &::after {
-            border-top-color: #ffffff;
-          }
-        }
-      }
-      /*&:nth-child(1) {
-        max-width: 156px;
-      }
-      &:nth-child(2) {
-        max-width: 156px;
-      }
-      &:nth-child(3) {
-        max-width: 140px;
-      }
-      &:nth-child(4) {
-        max-width: 176px;
-      }
-      &:nth-child(6) {
-        max-width: 170px;
-      }*/
-
-      &.flexMenu-viewMore {
-        float: right;
-        cursor: pointer;
-        padding: 20px 10px;
-        border: none;
-        text-align: center;
-        max-width: 85px;
-        > a {
-          line-height: 24px;
-          padding: 0 8px 0 12px;
-          border: 2px solid #5ba3b7;
-          border-radius: 3px;
-          color: #fff;
-          font-size: 12px;
-          text-shadow: 0 -1px 1px #000;
-          text-transform: none;
-          i {
-            margin-left: 5px;
-          }
-        }
-        &.active,
-        &:hover {
-          .flexMenu-popup {
-            display: block !important;
-          }
-          > a {
-            background: #5ba3b7;
-          }
-        }
-      }
-    }
-  }
-
-  .flexMenu-popup {
-    overflow: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background-color: #169bbc;
-    transition: all 0.3s linear;
-  }
-
-  .catalog-submenu {
-    overflow: hidden;
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-    z-index: 20;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    background-color: #169bbc;
-    border-bottom: 1px solid #22a6c7;
-    transition: all 0.3s linear;
-  }
-
-  .catalog-submenu__head {
-    color: #ffffff;
-    font-size: 24px;
-    font-weight: 700;
-    text-shadow: 0 1px 0 #004254;
-    text-transform: uppercase;
-    line-height: 1.22;
-    padding: 16px 28px 8px 10px;
-    &:after {
-      content: '';
-      display: block;
-      height: 1px;
-      background-color: #22a6c7;
-      margin-top: 8px;
-    }
-  }
-
-  .flexMenu-popup {
-    z-index: 10;
-  }
-  .flexMenu-popup,
-  .catalog-submenu__list {
-    padding: 0;
-    margin: 0;
-    li {
-      display: block;
-      list-style: none;
-      float: left;
-      width: 12.5%;
-      text-align: center;
-      //padding: 5px;
-      line-height: 1.2;
-      margin-bottom: 10px;
-      a {
-        color: #ffffff;
-        font-size: 15px;
-        line-height: 1;
-        text-transform: none;
-        display: block;
-        padding: 10px;
-        margin: 10px 0;
-        position: relative;
-        z-index: 1;
-        text-align: center;
-        img {
-          display: block;
-          margin-bottom: 10px;
-        }
-        &:hover {
-          background-color: #002c39;
-          text-decoration: none;
-        }
-      }
-      &:hover,
-      &.active {
-        > a {
-          background-color: #002c39;
-          text-decoration: none;
-        }
-      }
-      &:nth-child(8n + 1) {
-        clear: both;
-      }
-    }
-  }
-}
-
-@media (max-width: $breakpoint-medium-max) {
-  .catalog-menu {
-    display: none;
-  }
-}
 // .toolbar-toggle {
 //     display: none;
 //     color: #fff;
@@ -8980,20 +8753,6 @@ textarea.order-control {
   small {
     font-size: 90%;
   }
-}
-
-.uk-offcanvas-page .offcanvas-overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 1010;
-  box-shadow: inset 30px 0 30px -10px rgba(0, 0, 0, 0.6);
-}
-
-.uk-offcanvas-bar::after {
-  display: none;
 }
 
 .cart-tabs {
