--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -6,6 +6,12 @@
   margin: 24px 0;
 }
 
+.home-products__grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 20px;
+}
+
 .home-description {
   margin: 80px 0;
 }
@@ -22,124 +28,121 @@
 .home-slider {
   display: grid;
   grid-template-columns: 3fr 16px 1fr;
-  padding: 10px;
+  grid-template-rows: auto;
+  gap: 0px 0px;
+  grid-template-areas: 'main . thumbs';
+  padding: 16px;
   background-color: #5ba3b7;
+  border-radius: 8px;
+  user-select: none;
   @include --max-lg {
     padding: 2px;
   }
 }
 
-.home-slider-thumbs-wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
+.home-slider__main {
+  --swiper-navigation-size: 46px;
+  --swiper-navigation-top-offset: 12px;
+  --swiper-pagination-bottom: 24px;
+  --swiper-pagination-bullet-size: 16px;
+  --swiper-pagination-bullet-inactive-color: #bcbcbc;
+  --swiper-pagination-bullet-inactive-opacity: 1;
+  --swiper-pagination-color: #f8f428;
+  --swiper-pagination-bullet-horizontal-gap: 8px;
 
-.home-slider-thumbs {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.home-slider-thumbs__wrapper {
-}
-
-.home-slider-thumbs__slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  background-color: #002c39;
+  grid-area: main;
+  min-height: 0;
+  min-width: 0;
   position: relative;
   overflow: hidden;
-  cursor: pointer;
-  background-position: 50% 50%;
-  background-size: cover;
-  img {
-    display: none;
-    min-width: 100%;
-    height: auto;
+  .swiper-slide {
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: var(--swiper-navigation-size);
+    top: auto;
+    border-radius: 50%;
+    bottom: var(--swiper-navigation-top-offset);
+    background-color: rgba(255, 255, 255, 0.502);
+    box-shadow: 0px 0px 9px 0px rgba(0, 25, 41, 0.08);
+    color: #616161;
+    &:hover {
+      color: #000000;
+      background-color: rgba(255, 255, 255, 0.702);
+      box-shadow: 1.113px 7.922px 9px 0px rgba(0, 25, 41, 0.15);
+    }
+    &::after {
+      font-size: calc(var(--swiper-navigation-size) / 2);
+    }
+  }
+  .swiper-pagination {
+    display: flex;
+    justify-content: center;
+  }
+  .swiper-pagination-bullet {
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+  }
+  .swiper-pagination-bullet::before {
+    content: '';
+    display: block;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    transition: 0.3s ease;
+    background: var(--swiper-pagination-bullet-inactive-color);
+  }
+  .swiper-pagination-bullet-active::before {
+    width: 100%;
+    height: 100%;
+    background: var(--swiper-pagination-color);
+  }
+}
+
+.home-slider__thumbs {
+  grid-area: thumbs;
+  position: relative;
+  min-height: 0;
+  min-width: 0;
+  overflow: hidden;
+  .swiper-slide {
+    position: relative;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+    &::after {
+      content: '';
+      opacity: 0.3;
+      background: #022c3a;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transition: 0.3s ease;
+    }
+    &:hover::after {
+      opacity: 0;
+    }
+    &.swiper-slide-active::after {
+      opacity: 0;
+    }
+  }
+  .swiper-container {
+    width: 100%;
+    height: 100%;
     position: absolute;
     left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
-
-.home-slider-thumbs__slide::after {
-  content: '';
-  opacity: 0.3;
-  background: #022c3a;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.home-slider-thumbs__slide:hover::after {
-  opacity: 0;
-}
-
-.home-slider-thumbs__slide.swiper-slide-active::after {
-  opacity: 0;
-}
-
-.home-slider-main {
-  .swiper-pagination-bullet {
-    background: #d3cac4;
-    opacity: 1;
-  }
-  .swiper-pagination-bullet-active {
-    background: #f1dc00;
-  }
-  .swiper-button-next,
-  .swiper-button-prev {
-    width: 48px;
-    height: 48px;
-    background: rgba(0, 0, 0, 0.4);
-    bottom: 0;
-    top: auto;
-    margin-top: 0;
-    overflow: hidden;
-    color: #ffffff;
-    @include --max-lg {
-      width: 32px;
-      height: 32px;
-    }
-  }
-  .swiper-button-next:hover,
-  .swiper-button-prev:hover {
-    background: rgba(0, 0, 0, 0.8);
-  }
-  .swiper-button-next::after,
-  .swiper-button-prev::after {
-    font-size: 14px;
-    @include --max-lg {
-      font-size: 12px;
-    }
-  }
-  .swiper-button-next {
-    right: 0;
-  }
-  .swiper-button-prev {
-    left: 0;
-  }
-  &.swiper-container-horizontal > .swiper-pagination-bullets,
-  .swiper-pagination-custom,
-  .swiper-pagination-fraction {
-    @include --max-lg {
-      bottom: 4px;
-    }
+    top: 0;
   }
 }
