--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 @import 'floating-nav';
 @import 'search';
 @import 'home';
+@import 'ProductCard';
 
 @import 'contacts';
 
@@ -1558,103 +1559,6 @@ jdiv {
 .products-item__use {
   color: #5e5e5c;
   font-size: 10px;
-}
-
-.products-image {
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-  -webkit-perspective: 1200;
-  perspective: 1200;
-  -moz-transform: perspective(1200px);
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  position: relative;
-  z-index: 4;
-  overflow: hidden;
-}
-
-.products-image.products-image_hover .products-image__flipper {
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-
-.products-image__flipper {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transition: 0.3s linear;
-  -moz-transition: 0.3s linear;
-  -o-transition: 0.3s linear;
-  transition: 0.3s linear;
-}
-
-.products-image__flipper > div {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  user-select: none;
-}
-
-.products-item__image {
-  user-select: none;
-}
-
-.products-image__flipper > div:first-child {
-  z-index: 2;
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  transform: rotateY(0deg);
-}
-
-.products-image__flipper > div:last-child {
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
-}
-
-.products-image__flipper > div > img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 100%;
-}
-
-.products-item__image {
-  display: block;
-  text-align: center;
-  height: 200px;
-  overflow: hidden;
-  position: relative;
-  z-index: 4;
-  width: 200px;
-  margin: 0 auto;
-  img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-  }
-  &--coupon {
-    height: 150px;
-    margin-top: 130px;
-  }
 }
 
 .products-item__info {
@@ -12561,7 +12465,6 @@ td.u-product-options__items {
   top: 50%;
   transform: translate(-50%, -50%);
 }
-
 
 .uk-dropdown,
 .uk-dropdown-blank {
