--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,14 @@ $breakpoint-xl: 1280px;
 $breakpoint-2xl: 1536px;
 $breakpoint-3xl: 1792px;
 
+@mixin --hover {
+  @media (hover: hover) {
+    &:hover {
+      @content;
+    }
+  }
+}
+
 @mixin --sm {
   @media (min-width: $breakpoint-sm) {
     @content;
