--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -8,17 +8,125 @@
 
 .home-products__grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+  @include --md {
+    grid-template-columns: repeat(3, 1fr);
+    > *:nth-child(15) + * {
+      display: none;
+    }
+  }
+  @include --xl {
+    grid-template-columns: repeat(4, 1fr);
+    > *:nth-child(15) + * {
+      display: flex;
+    }
+  }
+  @include --3xl {
+    grid-template-columns: repeat(5, 1fr);
+    > *:nth-child(15) + * {
+      display: none;
+    }
+  }
 }
 
 .home-description {
-  margin: 80px 0;
+  margin: 96px 0;
+}
+
+.home-description__title {
+  font-size: 36px;
+  line-height: 1;
+  color: #000000;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 32px;
+  &::after {
+    content: '';
+    width: 64px;
+    height: 3px;
+    background-color: #000000;
+    display: block;
+    margin: 32px auto 0;
+  }
+}
+
+.home-description__content {
+  max-width: 1120px;
+  margin: 0 auto;
+  font-size: 18px;
+  line-height: 1.15;
+
+  p {
+    margin: 32px 0;
+  }
+
+  h2 {
+    margin: 64px 0 32px;
+    text-align: center;
+    font-size: 24px;
+    color: #000000;
+    font-weight: 700;
+    &::after {
+      content: '';
+      width: 64px;
+      height: 3px;
+      background-color: #000000;
+      display: block;
+      margin: 32px auto 0;
+    }
+  }
+
+  ul {
+    padding-left: 64px;
+    margin: 32px 0;
+    li {
+      margin: 8px 0;
+    }
+  }
 }
 
 .home-recent {
+  --swiper-navigation-size: 46px;
+  --swiper-navigation-sides-offset: 20px;
+
   background-color: rgb(232, 232, 232);
   padding: 48px 0;
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: var(--swiper-navigation-size);
+    border-radius: 50%;
+    filter: drop-shadow(0 0 4.5px rgba(0, 25, 41, 0.08));
+    background-color: rgba(0, 0, 0, 0.2);
+    color: #fff;
+    &:hover {
+      filter: drop-shadow(1.113px 7.922px 4.5px rgba(0, 25, 41, 0.15));
+      background-color: rgba(0, 0, 0, 0.30196078431372547);
+    }
+    &::after {
+      font-size: calc(var(--swiper-navigation-size) / 2);
+    }
+  }
+  .swiper-slide {
+    padding: 10px;
+    box-sizing: border-box;
+    height: auto;
+    display: flex;
+  }
+  .swiper-container {
+    overflow: hidden;
+    position: relative;
+    margin: 0 -10px;
+  }
+}
+
+.home-recent__title {
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #010101;
+  margin-bottom: 20px;
+  line-height: 1;
 }
 
 .home-other {
