--- a/src/scss/ProductCard.scss
+++ b/src/scss/ProductCard.scss
@@ -5,13 +5,22 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+
+  @include --max-lg {
+    padding: 6px;
+  }
+  @include --max-md {
+    .button-buyoneclick {
+      display: none;
+    }
+  }
 }
 
 .product-card::before {
   content: '';
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0px 0px 5.76px 0.24px rgba(4, 2, 24, 0.13);
+  box-shadow: 0px 0px 5px rgba(4, 2, 24, 0.13);
   position: absolute;
   left: 0;
   top: 0;
@@ -19,15 +28,16 @@
   bottom: 0;
   z-index: -1;
   transition: 0.3s ease;
+  will-change: transform;
+
+  @include --max-lg {
+    border-radius: 4px;
+  }
 }
 
 @media (hover: hover) {
   .product-card:hover::before {
-    // transform: scale(1.05);
-    left: -6px;
-    top: -6px;
-    right: -6px;
-    bottom: -6px;
+    transform: scale(1.06, 1.05);
   }
 }
 
@@ -42,6 +52,12 @@
   display: flex;
   flex-direction: column;
   gap: 3px;
+
+  @include --max-lg {
+    gap: 2px;
+    left: 6px;
+    top: 6px;
+  }
 }
 
 .product-card__flag {
@@ -85,6 +101,11 @@
   right: 6px;
   display: flex;
   flex-direction: column;
+
+  @include --max-lg {
+    right: 2px;
+    top: 2px;
+  }
 }
 
 .product-card__actions button {
@@ -108,6 +129,11 @@
   @include --hover {
     color: #f28316;
   }
+
+  @include --max-lg {
+    width: 28px;
+    height: 28px;
+  }
 }
 
 .product-card__price {
@@ -115,6 +141,17 @@
   color: rgb(0, 0, 0);
   font-weight: bold;
   line-height: 1;
+  @include --max-lg {
+    font-size: 14px;
+  }
+}
+
+.product-card__content {
+  margin-top: 12px;
+  flex-grow: 1;
+  @include --max-lg {
+    margin-top: 8px;
+  }
 }
 
 .product-card__title {
@@ -123,10 +160,12 @@
   color: #000;
   text-decoration: none;
   line-height: 20px;
-  margin-top: 12px;
-  flex-grow: 1;
   @include --hover {
     color: #f18a16;
+  }
+  @include --max-lg {
+    font-size: 12px;
+    line-height: 1.15;
   }
 }
 
@@ -135,6 +174,16 @@
   display: grid;
   gap: 10px;
   grid-template-columns: 44px 72px 1fr;
+
+  @include --max-lg {
+    gap: 6px;
+    grid-template-columns: 30px 44px 1fr;
+    margin-top: 12px;
+  }
+  @include --max-md {
+    gap: 3px;
+    grid-template-columns: 44px 1fr;
+  }
 }
 
 .button-buyoneclick {
@@ -154,6 +203,14 @@
   @include --hover {
     background: #e8e8e8;
     color: #686868;
+  }
+  @include --max-lg {
+    height: 30px;
+    width: 30px;
+    svg {
+      width: 14px;
+      height: 14px;
+    }
   }
 }
 
@@ -175,6 +232,19 @@
     background: #eed20e;
     color: #000;
   }
+  @include --max-lg {
+    font-size: 11px;
+    height: 30px;
+    gap: 2px;
+    svg {
+      width: 14px;
+      height: 14px;
+    }
+  }
+  @include --max-md {
+    padding-left: 4px;
+    padding-right: 4px;
+  }
 }
 
 .quantity {
@@ -182,6 +252,10 @@
   flex-shrink: 0;
   width: 72px;
   height: 44px;
+  @include --max-lg {
+    width: 44px;
+    height: 30px;
+  }
 }
 
 .quantity__input {
@@ -207,6 +281,11 @@
     outline: none;
     border-color: #000;
   }
+  @include --max-lg {
+    font-size: 11px;
+    padding-right: 16px;
+    padding-left: 4px;
+  }
 }
 
 .quantity__plus,
@@ -230,6 +309,10 @@
     color: #000;
     background: #e8e8e8;
   }
+  @include --max-lg {
+    width: 12px;
+    font-size: 16px;
+  }
 }
 
 .quantity__plus {
@@ -246,8 +329,8 @@
 
 .product-card__image {
   display: block;
-  width: 200px;
-  height: 200px;
+  width: 240px;
+  height: 240px;
   margin: 0 auto 12px;
   position: relative;
   user-select: none;
@@ -256,15 +339,32 @@
     height: auto;
     display: block;
   }
+  @include --max-lg {
+    width: 180px;
+    height: 180px;
+  }
+  @include --max-md {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 .image-flipper {
   display: block;
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 240px;
+  height: 240px;
   transform-style: preserve-3d;
   transition: 0.3s linear;
+
+  @include --max-lg {
+    width: 180px;
+    height: 180px;
+  }
+  @include --max-md {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 @media (hover: hover) {
